ghc/tests/typecheck/should_fail/Inst82_1.hs
module Inst82_1 where
import Data82

instance Read FooData where
   readsPrec _ _ = [(FooData,"")]
